--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -149,7 +149,7 @@ expectation ,/n./@期待;,/n./@预期;,/n./@指望;
 expectorate ,/v./@咳;,/v./@吐;,/v./@咯血;,/v./@咯;
 expenditure ,/n./@经费;
 explanation ,/n./@解释;
-exterminate ,/v./@消滅;,/v./@根除;
+exterminate ,/v./@消滅;,/v./@根除;,/vt./@滅絕;
 extradition ,/n./@引渡;,/n./@归国;
 extravagant ,/adj./@奢侈的;
 fabrication ,/n./@製作;,/n./@虛構;
