--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1036,7 +1036,7 @@ slump ,/v./@下降;,/n./@衰退;
 smack ,/n./@滋味;,/n./@少量;,/n./@掌掴;,/n./@猛然;
 small ,/adj./@小的;
 smart ,/adj./@聰明的;,/adj./@智慧的;,/adj./@時尚的;
-smear ,/v./@誹謗;
+smear ,/v./@誹謗;,/vt./@塗抹;,/vt./@弄髒;,/n./@汙跡;,/n./@誹謗;
 smell ,/v./@嗅;
 smelt ,/v./@熔煉;
 smile ,/v./@微笑;,/n./@微笑;
