--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -127,6 +127,7 @@ billiard ,/adj./@台球的;
 birthday ,/n./@生日;
 bisexual ,/adj./@兩性的;
 blackout ,/n./@黑屏;
+blissful ,/adj./@極樂的;
 blockade ,/n./@封鎖;,/n./@阻塞;
 blockage ,/n./@封鎖;,/n./@阻塞;,/n./@阻塞物;
 bloodlet ,/v./@放血;
@@ -572,7 +573,7 @@ indirect ,/n./@间接的;
 industry ,/n./@工业;
 infamous ,/adj./@醜惡的;,/adj./@臭名昭著的;,/adj./@聲名狼藉的;
 infantry ,/n./@步兵;,/n./@步兵團;
-inferior ,/adj./@下级的;,/adj./@下等的;,/adj./@差的;
+inferior ,/adj./@下级的;,/adj./@下等的;,/adj./@較差的;,/adj./@低等的;
 infinite ,/adj./@无尽的;,/adj./@无穷的;,/adj./@无限的;
 infinity ,/n./@无穷;,/n./@无限;,/n./@无数;
 informal ,/adj./@非正式的;
@@ -583,7 +584,7 @@ initiate ,/v./@开始;,/v./@创始;
 innocent ,/adj./@天真的;
 innovate ,/v./@革新;
 insolent ,/adj./@無理的;,/adj./@傲慢的;
-instance ,/n./@例子;
+instance ,/n./@例子;,/n./@實例;,/n./@情況;,/n./@場合;,/vt./@舉例;,/vt./@引證;
 instinct ,/n./@本能;
 instruct ,/v./@指导;,/v./@指示;
 insulate ,/v./@隔離;,/v./@孤立;,/v./@絕緣;
