--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -258,6 +258,7 @@ delirious ,/adj./@瘋狂的;,/adj./@精神錯亂的;
 demanding ,/adj./@要求严苛的;
 demeanour ,/n./@舉止;,/n./@風度;,/n./@舉動;,/n./@行為;
 democracy ,/n./@民主;,/n./@民主主义;
+denigrate ,/vt./@詆毀;,/vt./@毀謗;,/vt./@貶低;,/vt./@玷辱;
 departure ,/n./@离开;,/n./@出发;,/n./@违背;
 dependent ,/n./@依赖性的;
 depravity ,/n./@堕落;
@@ -296,6 +297,7 @@ dishonest ,/adj./@不诚实的;
 dismantle ,/v./@拆除;,/v./@解散;,/v./@取消;
 dismissal ,/n./@解雇;
 disorient ,/vt./@使失去方向;,/vt./@使迷惘;
+disparage ,/vt./@貶低;,/vt./@毀謗;
 disparity ,/n./@不同;,/n./@懸殊;
 dispersal ,/n./@分散;,/n./@传播;,/n./@散布;,/n./@疏散;,/n./@消失;
 disregard ,/v./@忽视;,/v./@不尊重;
@@ -801,6 +803,7 @@ satisfied ,/adj./@感到滿意的;
 scapegoat ,/n./@替罪羊;,/n./@替罪者;
 schematic ,/adj./@图解的;,/adj./@概要的;,/adj./@示意的;,/adj./@圖示的;,/adj./@概略的;
 scientist ,/n./@科学家;
+scoundrel ,/n./@無賴;,/n./@壞蛋;,/n./@惡棍;,/n./@流氓;
 scrapbook ,/n./@剪貼簿;
 scrutable ,/adj./@可以了解的;
 sculpture ,/n./@雕塑;
