--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -431,6 +431,7 @@ dwindle
 dynamic
 earnest
 ebonite
+echelon
 economy
 ecstasy
 edifice
@@ -458,6 +459,7 @@ English
 engrave
 enhance
 entitle
+entwine
 envelop
 envious
 environ
