--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -258,6 +258,7 @@ delirious
 demanding
 demeanour
 democracy
+denigrate
 departure
 dependent
 depravity
@@ -296,6 +297,7 @@ dishonest
 dismantle
 dismissal
 disorient
+disparage
 disparity
 dispersal
 disregard
@@ -801,6 +803,7 @@ satisfied
 scapegoat
 schematic
 scientist
+scoundrel
 scrapbook
 scrutable
 sculpture
