--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -431,6 +431,7 @@ dwindle ,/v./@减少;,/v./@变小;,/v./@缩小;
 dynamic ,/adj./@動態的;
 earnest ,/adj./@認眞的;
 ebonite ,/n./@硬化橡皮;,/n./@硬橡膠;
+echelon ,/n./@階層;,/n./@梯隊;,/n./@等級;
 economy ,/n./@經濟;
 ecstasy ,/n./@狂喜;,/n./@入迷;,/n./@忘形;
 edifice ,/n./@大廈;
@@ -458,6 +459,7 @@ English ,/n./@英語;
 engrave ,/v./@刻上;
 enhance ,/v./@增強;
 entitle ,/v./@題名;
+entwine ,/vt./@纏繞;,/vt./@糾纏;,/vt./@交錯;
 envelop ,/v./@包圍;,/v./@包裹;,/v./@圍繞;,/n./@信封;
 envious ,/adj./@嫉妒的;
 environ ,/v./@環繞;,/v./@包圍;
