--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -29,6 +29,7 @@ allegation ,/n./@主张;,/n./@断言;
 allegiance ,/n./@忠誠;
 allocation ,/n./@分配;
 amalgamate ,/v./@合併;
+amateurish ,/adj./@外行的;,/adj./@業餘的;,/adj./@不熟練的;
 ambassador ,/n./@大使;
 ambivalent ,/adj./@矛盾的;,/adj./@相克的;
 ameliorate ,/v./@改善;
@@ -540,7 +541,7 @@ resentment ,/n./@不滿;,/n./@忿恨;
 resignedly ,/adj./@听从地;
 resilience ,/n./@恢复力;,/n./@弹性;
 resistance ,/n./@阻力;
-resolution ,/n./@分辨率;,/n./@决议;,/n./@决心;
+resolution ,/n./@分辨率;,/n./@决议;,/n./@决心;,/n./@決定;,/n./@解析;,/n./@解決;,/n./@解析度;
 respectful ,/adj./@怀有敬意的;
 respective ,/adj./@分别的;,/adj./@各自的;
 responsive ,/adj./@有责任的;
