--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -23,7 +23,7 @@ architecture ,/n./@架构;
 assassinator ,/n./@刺客;
 asynchronous ,/adj./@异步的;,/adj./@不同时的;
 auscultation ,/n./@听诊;
-authenticate ,/v./@鑒定;,/v./@證明;
+authenticate ,/v./@鑒定;,/v./@證明;,/vt./@證實;
 bloodletting ,/n./@放血疗法;
 bureaucratic ,/adj./@官僚主義的;
 cancellation ,/n./@刪除;,/n./@取消;
@@ -163,6 +163,7 @@ possiblility ,/n./@可能性;
 predilection ,/n./@偏好;,/n./@偏爱;,/n./@嗜好;
 prerequisite ,/n./@先決條件;,/adj./@首要必備的;
 presentation ,/n./@展示;,/n./@提供;,/n./@表演;
+presentiment ,/n./@預感;
 professional ,/adj./@专业的;,/adj./@职业的;
 proportional ,/adj./@成比例的;
 prostitution ,/n./@賣淫;
