--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -551,6 +551,7 @@ guide ,/v./@引導;,/v./@向导;,/n./@向导;,/n./@指南;,/v./@指导;
 guild ,/n./@行會;
 guise ,/n./@外觀;,/n./@外表;,/n./@偽裝;,/n./@形式;,/n./@外貌;,/n./@裝束;
 gulag ,/n./@集中營;
+hairy ,/adj./@多毛的;
 halve ,/v./@減半;
 hance ,/n./@供腰;
 handy ,/adj./@便利的;
@@ -1047,6 +1048,7 @@ snack ,/n./@快餐;,/n./@小吃;
 snafu ,/n./@混亂;,/v./@混亂;
 snail ,/n./@蝸牛;
 snake ,/n./@蛇;
+snark ,/vt./@諷刺;,/vt./@嘲諷;
 sneak ,/v./@溜;,/v./@鬼鬼祟祟地做;
 sneer ,/v./@嘲笑;,/v./@冷笑;
 sniff ,/v./@嗅;
