--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -565,7 +565,7 @@ forget ,/v./@忘記;
 formal ,/adj./@正式的;,/adj./@正規的;
 format ,/n./@格式;
 former ,/adj./@以前的;
-fossil ,/n./@化石;
+fossil ,/n./@化石;,/adj./@化石的;,/adj./@成化石的;,/n./@老頑固;,/n./@頑固不化的人;,/adj./@守舊的;
 foster ,/v./@養育;,/v./@撫養;
 freeze ,/v./@冰凍;,/v./@冷凍;
 fresco ,/n./@壁畫;
@@ -798,6 +798,7 @@ malign ,/v./@誹謗;,/v./@污衊;,/v./@中傷;
 mallow ,/n./@錦葵;
 mammal ,/n./@哺乳動物;
 manage ,/v./@處理;,/v./@管理;,/v./@控制;
+mangle ,/vt./@損毀;,/vt./@毀壞;,/vt./@壓碎;,/vt./@撕毀;
 manner ,/n./@方式;,/n./@習慣;
 mantle ,/v./@覆蓋;,/n./@斗篷;
 manual ,/adj./@手工的;,/n./@手冊;,/n./@指南;
@@ -1028,6 +1029,7 @@ purify ,/v./@净化;,/v./@純化;
 purple ,/adj./@紫色的;,/n./@紫色;
 pursue ,/v./@追求;
 putrid ,/adj./@腐臭的;,/adj./@腐爛的;
+puttee ,/n./@綁腿布;,/n./@護腿布;,/n./@護腿皮;
 puzzle ,/v./@使困惑;,/n./@謎;
 quadra ,/adj.//pref./@四的;
 quaint ,/adj./@古色古香的;,/adj./@老式的;,/adj./@老派的;
@@ -1217,6 +1219,7 @@ shrill ,/adj./@尖銳刺耳的;
 shrimp ,/n./@蝦;
 shrine ,/n./@神殿;,/n./@聖地;,/n./@神龕;
 shrink ,/v./@收縮;,/v./@畏縮;,/n./@心理醫生;
+shroom ,/n./@蘑菇;
 shroud ,/v./@覆蓋;,/v./@遮蔽;,/n./@覆蓋物;,/n./@壽衣;,/n./@裹尸布;
 signal ,/n./@信號;
 signor ,/n./@先生;
