--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -411,7 +411,7 @@ dispute ,/v./@爭論;
 disrupt ,/v./@破壞;
 dissent ,/n./@異議;,/n./@不信國教;
 distant ,/adj./@遙遠的;
-distort ,/v./@扭曲;
+distort ,/v./@扭曲;,/vt./@歪曲;,/vt./@曲解;,/vt./@篡改;
 disturb ,/v./@打擾;
 diverge ,/vi./@分歧;,/vi./@離題;,/vi./@分叉;,/vi./@偏离;,/vi./@相异;
 diverse ,/adj./@多樣的;
