--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -614,6 +614,7 @@ junction ,/n./@会合处;,/n./@交叉路口;
 juvenile ,/adj./@青少年的;,/n./@少年;,/n./@幼兽;,/n./@雏鸟;
 kangaroo ,/n./@袋鼠;
 keyboard ,/n./@键盘;
+lameness ,/n./@瘸腿;,/n./@跛足;,/n./@蹩腳;
 laminate ,/v./@鍛壓;,/v./@層壓;,/v./@分成薄片;
 landfill ,/n./@垃圾填埋;,/n./@垃圾填埋地;
 landmine ,/n./@地雷;
@@ -705,9 +706,10 @@ multiple ,/adj./@多样的;
 multiply ,/v./@相乘;,/v./@相加;
 murderer ,/n./@谋杀者;
 muscular ,/adj./@肌肉的;,/adj./@肌肉发达的;
+mushroom ,/n./@蘑菇;
 musician ,/n./@音乐家;
 mustache ,/n./@胡子;,/n./@髭;
-mutilate ,/v./@切斷;,/v./@毀傷;,/v./@殘害;
+mutilate ,/v./@切斷;,/v./@毀傷;,/v./@殘害;,/vt./@毀壞;
 narcotic ,/n./@致幻毒品;,/n./@催眠藥;,/n./@麻醉劑;,/adj./@麻醉的;
 national ,/adj./@国家的;,/adj./@民族的;
 nativity ,/n./@耶稣的诞生;
