--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -455,6 +455,7 @@ histogram ,/n./@直方图;,/n./@柱形图;
 homefront ,/n./@國土防線;
 homegrown ,/adj./@本土的;,/adj./@國產的;,/adj./@自家種植的;
 homemaker ,/n./@主妇;
+homologue ,/n./@同系物;
 honeycomb ,/n./@蜂巢;
 hostility ,/n./@敵意;,/n./@敵對;
 hubristic ,/adj./@傲慢的;,/adj./@自大的;,/adj./@自恃的;
