--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -551,6 +551,7 @@ guide
 guild
 guise
 gulag
+hairy
 halve
 hance
 handy
@@ -1047,6 +1048,7 @@ snack
 snafu
 snail
 snake
+snark
 sneak
 sneer
 sniff
