--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -798,6 +798,7 @@ malign
 mallow
 mammal
 manage
+mangle
 manner
 mantle
 manual
@@ -1028,6 +1029,7 @@ purify
 purple
 pursue
 putrid
+puttee
 puzzle
 quadra
 quaint
@@ -1217,6 +1219,7 @@ shrill
 shrimp
 shrine
 shrink
+shroom
 shroud
 signal
 signor
