--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -614,6 +614,7 @@ junction
 juvenile
 kangaroo
 keyboard
+lameness
 laminate
 landfill
 landmine
@@ -705,6 +706,7 @@ multiple
 multiply
 murderer
 muscular
+mushroom
 musician
 mustache
 mutilate
