--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -382,6 +382,7 @@ investment ,/n./@投资;
 invigorate ,/v./@激活;
 invincible ,/adj./@無敵的;
 invitation ,/n./@邀请;
+ionization ,/n./@電離;,/n./@離子化;
 irrational ,/adj./@不合理的;
 irreverent ,/adj./@不敬的;
 irritating ,/adj./@令人恼怒的;
