--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -92,10 +92,12 @@ qualification ,/n./@资格;,/n./@条件;,/n./@限制;,/n./@赋予资格;
 questionnaire ,/n./@问卷;
 regimentation ,/n./@严格控制;,/n./@严密管制;
 reinforcement ,/n./@加强;,/n./@增援;
+replenishment ,/n./@補充;,/n./@再裝滿;,/n./@再備足;
 righteousness ,/n./@正义;,/n./@公正;
 sadomasochism ,/n./@受虐狂;
 sanctimonious ,/adj./@假裝聖潔的;,/adj./@假裝虔誠的;,/adj./@假裝誠實的;
 schizophrenic ,/adj./@精神分裂症的;,/n./@精神分裂症患者;
+sedimentation ,/n./@沉澱;,/n./@沉積;,/n./@沉降;
 seismological ,/adj./@地震学的;
 semiconductor ,/n./@半導體;
 sophisticated ,/adj./@复杂的;
