--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -11,6 +11,7 @@ dysproteinosis ,/n./@蛋白質缺乏症;
 gentrification ,/n./@中产阶级化;
 identification ,/n./@鉴定;
 implementation ,/n./@实现;,/n./@实行;,/n./@执行;
+impressionable ,/adj./@敏感的;,/adj./@易受影響的;
 infrastructure ,/n./@基础设施;
 initialization ,/n./@初始化;
 interpretation ,/n./@翻譯;,/n./@解釋;,/n./@口譯;
