--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -304,6 +304,7 @@ crude ,/adj./@粗糙的;
 cruel ,/adj./@殘酷的;
 crumb ,/n./@面包屑;,/n./@碎屑;,/v./@弄碎;
 crush ,/v./@鎭壓;
+crust ,/n./@麵包皮;,/n./@硬外皮;,/n./@地殼;,/n./@甲殼;,/n./@痂;,/n./@外殼;
 crypt ,/n./@地窖;
 culpa ,/n./@疏忽;,/n./@罪;
 curly ,/adj./@捲曲的;,/adj./@捲毛的;
@@ -443,7 +444,7 @@ final ,/adj./@最終的;
 first ,/adj./@第一的;
 firth ,/n./@峽灣;
 fishy ,/adj./@魚的;,/adj./@似魚的;,/adj./@可疑的;
-flail ,/v./@打;,/v./@用連枷打;
+flail ,/v./@打;,/v./@用連枷打;,/n./@連枷;
 flame ,/n./@火焰;
 flank ,/n./@側面;
 flare ,/v./@閃耀;,/v./@閃光;,/v./@燃燒;,/n./@照明彈;,/n./@耀斑;
@@ -579,7 +580,7 @@ hoist ,/vt./@舉起;
 hokum ,/n./@噱頭;,/n./@胡言;,/n./@胡扯;
 holly ,/n./@冬青;
 honey ,/n./@蜂蜜;
-honor ,/n./@榮譽;
+honor ,/n./@榮譽;,/n./@名譽;,/n./@光榮;,/n./@敬意;,/n./@榮幸;
 horde ,/n./@大羣;,/n./@羣;,/n./@遊牧部落;
 horny ,/adj./@淫蕩的;,/adj./@角狀的;
 horse ,/n./@馬;
@@ -1058,6 +1059,7 @@ sober ,/adj./@清醒的;
 solar ,/adj./@太陽的;
 solid ,/n./@固體;
 solve ,/v./@解決;
+sonde ,/n./@探空火箭;,/n./@探空氣球;,/n./@地下探测仪;,/n./@水下探测仪;
 sooth ,/adj./@眞實的;
 sorry ,/n./@抱歉;,/adj./@悲傷的;
 sound ,/n./@聲音;
