--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -499,7 +499,7 @@ excite ,/v./@刺激;
 excuse ,/v./@原諒;,/n./@借口;
 exempt ,/vt./@免除;
 exhale ,/v./@呼氣;
-exhume ,/v./@掘出;
+exhume ,/v./@掘出;,/vt./@發掘;
 exotic ,/adj./@外國的;
 expand ,/v./@擴大;
 expect ,/v./@期望;,/v./@預料;
@@ -824,6 +824,7 @@ member ,/n./@成員;,/n./@會員;
 memoir ,/n./@回憶録;,/n./@自傳;
 memory ,/n./@記憶;,/n./@記憶力;,/n./@紀念;,/n./@存儲;
 menace ,/v./@威脅;,/v./@恐嚇;,/n./@威脅;,/n./@恐嚇;
+meninx ,/n./@腦膜;
 mental ,/adj./@精神的;
 merely ,/adv./@僅;
 meteor ,/n./@流星;,/n./@大氣現象;
@@ -859,6 +860,8 @@ mother ,/n./@母親;
 motion ,/n./@運動;
 motive ,/n./@動機;,/n./@目的;
 mouldy ,/n./@魚雷;,/adj./@發霉的;
+mucosa ,/n./@黏膜;
+mucous ,/adj./@黏液的;,/adj./@黏的;,/adj./@分泌黏液的;
 muffle ,/v./@蒙住;
 mumble ,/v./@咕噥;
 murder ,/v./@謀殺;
@@ -1333,6 +1336,7 @@ suburb ,/n./@郊區;
 subway ,/n./@地鐵;
 suffer ,/v./@遭受;
 suffix ,/n./@后綴;
+sulfur ,/n./@硫磺;,/n./@硫;
 sullen ,/adj./@阴沉的;,/adj./@郁郁寡欢的;,/adj./@闷闷不乐的;
 summer ,/n./@夏;
 summon ,/v./@召喚;,/v./@召集;
@@ -1404,7 +1408,7 @@ tongue ,/n./@舌;,/n./@語言;
 topple ,/v./@推倒;,/v./@顛覆;,/vi./@倒下;
 torpor ,/n./@冷漠;
 toward ,/prep./@向;
-tragic ,/adj./@悲慘的;
+tragic ,/adj./@悲慘的;,/adj./@悲劇的;,/adj./@悲劇性的;,/adj./@不幸的;
 trance ,/n./@怳惚;,/n./@恍惚;,/n./@出神;,/n./@入定;
 trauma ,/n./@外傷;,/n./@創傷;,/n./@傷口;
 travel ,/n./@旅行;
@@ -1444,6 +1448,7 @@ unless ,/prep./@除非;
 unload ,/v./@卸貨;
 unlock ,/v./@解鎖;,/v./@開啓;
 unreal ,/adj./@不眞實的;
+unseen ,/vt./@未看見的;,/vt./@看不見的;
 unsung ,/adj./@未唱的;,/adj./@埋沒的;
 unveil ,/v./@揭開;,/v./@揭露;
 unwrap ,/v./@打開;,/v./@拆開;,/v./@解開;
