--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1188,6 +1188,8 @@ suction ,/n./@吸入;,/n./@吸引;,/n./@吸;,/n./@吸力;
 suffice ,/v./@足夠;,/v./@滿足;
 suggest ,/v./@建議;
 suicide ,/v./@自殺;
+sulfide ,/n./@硫化物;
+sulphur ,/n./@硫磺;,/n./@硫;
 summary ,/n./@摘要;,/adj./@簡易的;
 support ,/v./@支持;
 suppose ,/v./@假設;
@@ -1261,6 +1263,7 @@ tribune ,/n./@保民官;
 tribute ,/n./@頌詞;,/n./@獻禮;,/n./@贡品;
 trickle ,/v./@滴下;
 trigger ,/n./@扳機;,/vt./@觸發;,/vt./@引發;,/n./@誘因;,/n./@触发器;,/vt./@引起;
+trilogy ,/n./@三部曲;,/n./@三部劇;,/n./@三聯劇;
 trinity ,/n./@三位一體;,/n./@三倍;
 triumph ,/n./@勝利;,/n./@凱旋;
 trivial ,/adj./@瑣碎的;
