--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -667,7 +667,9 @@ mediator ,/n./@调解人;
 mediocre ,/adj./@普通的;,/adj./@平凡的;,/adj./@中等的;,/adj./@平庸的;
 meditate ,/v./@考慮;,/v./@冥想;
 meltdown ,/n./@熔毀;,/n./@崩潰;,/n./@潰敗;
+membrane ,/n./@膜;,/n./@薄膜;,/n./@膜狀物;
 memorize ,/v./@记住;
+meninges ,/n.//pl./@腦膜;
 merchant ,/n./@商人;
 merciful ,/adj./@仁慈的;
 metaphor ,/n./@暗喻;,/n./@隱喻;
@@ -1039,6 +1041,7 @@ suddenly ,/adv./@突然;,/adv./@忽然;
 suffrage ,/n./@选举权;,/n./@投票选举;
 suitable ,/adj./@合适的;
 suitcase ,/n./@手提箱;
+sulphide ,/n./@硫化物;
 sunshine ,/n./@阳光;
 superior ,/adj./@上级的;,/adj./@优秀的;
 suppress ,/v./@鎮壓;
@@ -1062,7 +1065,7 @@ tectonic ,/adj./@构造的;,/adj./@建筑的;,/adj./@地壳构造的;
 teenager ,/n./@青少年;
 teleport ,/v./@瞬間移動;,/v./@心靈傳輸;
 template ,/n./@模版;
-temporal ,/adj./@时间的;
+temporal ,/adj./@时间的;,/adj./@暫存的;,/adj./@短暫的;,/adj./@世間的;,/adj./@世俗的;,/adj./@現世的;,/adj./@時態的;
 tendency ,/n./@趋势;
 terminal ,/n./@终端;,/n./@终点;
 terrible ,/adj./@可怕的;
@@ -1131,6 +1134,7 @@ vigilant ,/adj./@警惕的;,/adj./@警戒的;,/adj./@警醒的;
 vignette ,/n./@片段;,/n./@短文;,/n./@小插曲;,/n./@花絮;,/n./@圖案;,/n./@蔓藤花樣;,/n./@小花饰;
 vigorous ,/adj./@精力充沛的;
 violence ,/n./@暴力;
+visceral ,/adj./@內臟的;
 visional ,/adj./@虚幻的;,/adj./@视力的;
 vocation ,/n./@职业;
 volatile ,/n./@不稳定的;,/adj./@揮發性的;,/adj./@爆炸性的;,/adj./@反復無常的;
