--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -465,6 +465,7 @@ hydraulic ,/adj./@水力的;,/adj./@液压的;
 hypnotize ,/v./@吸引;
 hypocrisy ,/n./@虛僞;,/n./@僞善;
 identical ,/adj./@相同的;
+illegible ,/adj./@無法辨認的;
 illogical ,/adj./@不合邏輯的;,/adj./@不合理的;
 imaginary ,/adj./@想象的;
 imitation ,/n./@模仿;
@@ -504,7 +505,7 @@ infuriate ,/v./@激怒;
 ingenious ,/adj./@巧妙的;,/adj./@灵巧的;
 ingenuity ,/n./@精巧;,/n./@獨創性;,/n./@心靈手巧;
 insertion ,/n./@插入;
-instigate ,/v./@唆使;,/v./@煽动;,/v./@怂恿;
+instigate ,/v./@唆使;,/v./@煽动;,/v./@怂恿;,/vt./@提起;,/vt./@发起;
 institute ,/n./@学会;,/n./@协会;,/v./@制定;,/v./@創立;
 insurance ,/n./@保险;
 insurgent ,/adj./@叛亂的;,/n./@叛亂者;
