--- a/Files/lang/en/english13.csv
+++ b/Files/lang/en/english13.csv
@@ -92,10 +92,12 @@ qualification
 questionnaire
 regimentation
 reinforcement
+replenishment
 righteousness
 sadomasochism
 sanctimonious
 schizophrenic
+sedimentation
 seismological
 semiconductor
 sophisticated
