--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -304,6 +304,7 @@ crude
 cruel
 crumb
 crush
+crust
 crypt
 culpa
 curly
@@ -1058,6 +1059,7 @@ sober
 solar
 solid
 solve
+sonde
 sooth
 sorry
 sound
