--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -824,6 +824,7 @@ member
 memoir
 memory
 menace
+meninx
 mental
 merely
 meteor
@@ -859,6 +860,8 @@ mother
 motion
 motive
 mouldy
+mucosa
+mucous
 muffle
 mumble
 murder
@@ -1333,6 +1336,7 @@ suburb
 subway
 suffer
 suffix
+sulfur
 sullen
 summer
 summon
@@ -1444,6 +1448,7 @@ unless
 unload
 unlock
 unreal
+unseen
 unsung
 unveil
 unwrap
