--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -1188,6 +1188,8 @@ suction
 suffice
 suggest
 suicide
+sulfide
+sulphur
 summary
 support
 suppose
@@ -1261,6 +1263,7 @@ tribune
 tribute
 trickle
 trigger
+trilogy
 trinity
 triumph
 trivial
