--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -667,7 +667,9 @@ mediator
 mediocre
 meditate
 meltdown
+membrane
 memorize
+meninges
 merchant
 merciful
 metaphor
@@ -1039,6 +1041,7 @@ suddenly
 suffrage
 suitable
 suitcase
+sulphide
 sunshine
 superior
 suppress
@@ -1131,6 +1134,7 @@ vigilant
 vignette
 vigorous
 violence
+visceral
 visional
 vocation
 volatile
