--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -25,6 +25,7 @@ afterwards ,/adv./@後來;,/adv./@之後;
 aggrandize ,/v./@增加;,/n./@提高;
 aggression ,/n./@侵略;
 aggressive ,/adj./@冒犯的;
+agronomist ,/n./@農學家;,/n./@農藝學家;
 allegation ,/n./@主张;,/n./@断言;
 allegiance ,/n./@忠誠;
 allocation ,/n./@分配;
@@ -137,7 +138,7 @@ complement ,/n./@补充;
 completely ,/adv./@完全地;
 completion ,/n./@完成;,/n./@完滿;
 complexity ,/n./@复杂@性;
-compliance ,/n./@順從;
+compliance ,/n./@順從;,/n./@遵從;,/n./@應允;
 complicate ,/v./使@复杂化;
 compliment ,/n./@恭维;
 comprehend ,/v./@理解;,/v./@领悟;
@@ -307,6 +308,7 @@ frustrated ,/adj./@受挫的;,/adj./@沮丧的;
 functional ,/adj./@实用的;,/adj./@功能的;
 futuristic ,/adj./@未來派的;,/adj./@超前新奇的;,/adj./@极其新潮的;
 generation ,/n./@一代;
+geneticist ,/n./@遺傳學家;
 girlfriend ,/n./@女朋友;
 glamourous ,/adj./@迷人的;,/adj./@有魅力的;
 government ,/n./@政府;,/n./@政體;,/n./@管轄;
@@ -511,6 +513,7 @@ prosecutor ,/n./@檢察官;
 prosperity ,/n./@繁榮;,/n./@興旺;
 prosperous ,/adj./@繁荣的;
 protection ,/n./@保護;
+protrusion ,/n./@突出;,/n./@突出物;
 providence ,/n./@天意;
 psychopath ,/n./@精神病人;
 pubescence ,/n./@青春期;,/n./@軟毛;
