--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -148,6 +148,7 @@ organisation ,/n./@组织;
 organization ,/n./@组织;
 ostentatious ,/adj./@招搖的;,/adj./@誇耀的;
 overestimate ,/v./@高估;
+overwhelming ,/adj./@壓倒性的;
 paramilitary ,/adj./@准军事的;
 participance ,/n./@参与;,/n./@分享;
 participancy ,/n./@参与;,/n./@分享;
