--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1098,7 +1098,7 @@ squat ,/v./@蹲;
 squid ,/n./@鱿鱼;
 stack ,/n./@堆;
 staff ,/n./@員工;
-stage ,/n./@舞臺;,/n./@階段;
+stage ,/n./@舞臺;,/n./@階段;,/vt./@上演;,/vt./@舉行;,/vt./@發動;,/vt./@籌劃;
 stain ,/n./@汙點;
 stake ,/n./@柱;,/n./@賭註;,/n./@樁;,/n./@火刑柱;,/n./@利害關係;,/n./@風險;
 stale ,/adj./@陳舊的;
