--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -395,6 +395,7 @@ design ,/v./@設計;
 desire ,/v./@慾望;
 detach ,/v./@分離;,/v./@拆卸;
 detail ,/n./@細節;
+detain ,/vt./@拘留;,/vt./@扣留;,/vt./@留住;
 detect ,/v./@察覺;
 detour ,/vi./@绕行;,/vi./@绕道;,/n./@绕行;,/n./@绕道;
 device ,/n./@設備;
@@ -810,6 +811,7 @@ market ,/n./@市場;,/n./@銷路;
 marrow ,/n./@髓;,/n./@骨髓;,/n./@精華;,/n./@活力;
 martyr ,/n./@烈士;
 marvel ,/v./(對...感到)@驚訝;,/v./@欽佩;
+mascot ,/n./@吉祥物;
 master ,/n./@主人;
 matter ,/n./@問題;,/n./@事情;
 mature ,/adj./@成熟的;
