--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -94,7 +94,7 @@ attempt ,/v./@企圖;,/v./@嘗試;,/n./@企圖;,/n./@嘗試;
 attract ,/v./@吸引;
 auction ,/n./@拍賣;
 augment ,/v./@增大;
-auspice ,/n./@贊助;,/n./@主辦;,/n./@吉兆;
+auspice ,/n./@贊助;,/n./@主辦;,/n./@吉兆;,/n./@預兆;
 austere ,/adj./@嚴峻的;
 autopsy ,/n./@驗屍;
 avarice ,/n./@貪婪;,/n./@貪慾;
@@ -429,6 +429,7 @@ durable ,/adj./@耐用的;,/adj./@持久的;
 dustbin ,/n./@垃圾桶;,/n./@垃圾箱;
 dwindle ,/v./@减少;,/v./@变小;,/v./@缩小;
 dynamic ,/adj./@動態的;
+earflap ,/n./@耳罩;
 earnest ,/adj./@認眞的;
 ebonite ,/n./@硬化橡皮;,/n./@硬橡膠;
 echelon ,/n./@階層;,/n./@梯隊;,/n./@等級;
@@ -917,6 +918,7 @@ pollute ,/v./@污染;
 polygon ,/n./@多邊形;
 polymer ,/n./@聚合物;
 pompous ,/adj./@自大的;,/adj./@浮誇的;,/adj./@華而不實的;
+pontoon ,/n./@浮舟;,/n./@浮筒;,/n./@浮桥;,/n./@浮船塢;
 popcorn ,/n./@爆米花;
 popular ,/adj./@流行的;,/adj./@受歡迎的;
 portion ,/n./@分配;
