--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -908,6 +908,7 @@ renovate ,/v./@更新;,/v./@修复;
 repartee ,/n./@妙語;,/n./@巧辯;,/n./@機智的回答;
 reporter ,/n./@報告人;,/n./@記者;
 reprieve ,/n./@暂缓;,/n./@缓刑;,/v./@暂时解救;
+reproach ,/vt./@責備;,/vt./@斥責;,/n./@責備;,/vt./@指責;
 republic ,/n./@共和;
 research ,/n./@调查;
 resemble ,/v./@像;,/v./@类似于;
@@ -936,6 +937,7 @@ ruminant ,/adj./@反芻的;,/adj./@沉思的;
 ruminate ,/v./@沉思;,/v./@反芻;,/vi./@反复思考;
 ruthless ,/adj./@冷酷的;
 sabotage ,/n./@破坏;,/n./@妨碍;
+saboteur ,/n./@蓄意破壞者;
 sadistic ,/adj./@虐待狂的;
 sanction ,/n./@批准;,/n./@认可;
 Saturday ,/n./@星期六;
