--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -531,7 +531,7 @@ introduce ,/v./@介紹;,/v./@引進;,/v./@采用;
 intuition ,/n./@直觉;
 intuitive ,/adj./@直觉的;
 invention ,/n./@发明;,/n./@创造;
-inventory ,/n./@存货;,/n./@清单;
+inventory ,/n./@存货;,/n./@清单;,/n./@存貨清單;
 inversion ,/n./@倒置;,/n./@倒轉;,/n./@颠倒;,/n./@反向;
 invisible ,/adj./@不可见的;
 irregular ,/adj./@不規則的;
@@ -562,6 +562,7 @@ lubricate ,/v./@潤滑;
 lucrative ,/adj./@賺錢的;,/adj./@有利可圖的;
 luxurious ,/adj./@豪華的;,/adj./@奢侈的;,/adj./@非常舒適的;
 machinery ,/n./@机械;
+magnesium ,/n./@鎂;
 magnitude ,/n./@宏大;,/n./@重要;,/n./@量級;,/n./@大小;,/n./@震級;
 makeshift ,/adj./@临时替代的;,/adj./@臨時代用的;,/adj./@臨時用的;,/adj./@權宜的;
 malicious ,/adj./@惡意的;
@@ -780,7 +781,7 @@ replenish ,/v./@補充;,/v./@再加滿;
 reposeful ,/adj./@平穩的;,/adj./@沉著的;
 reprehend ,/v./@指責;,/v./@斥責;,/n./@責備;
 represent ,/v./@代表;
-reprimand ,/v./@谴责;
+reprimand ,/v./@谴责;,/vt./@訓斥;,/vt./@斥責;
 reproduce ,/v./@复制;
 repudiate ,/v./@否認;,/v./@拒絕接受;
 repulsive ,/adj./@不吸引人的;
