--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -25,6 +25,7 @@ afterwards
 aggrandize
 aggression
 aggressive
+agronomist
 allegation
 allegiance
 allocation
@@ -307,6 +308,7 @@ frustrated
 functional
 futuristic
 generation
+geneticist
 girlfriend
 glamourous
 government
@@ -511,6 +513,7 @@ prosecutor
 prosperity
 prosperous
 protection
+protrusion
 providence
 psychopath
 pubescence
