--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -395,6 +395,7 @@ design
 desire
 detach
 detail
+detain
 detect
 detour
 device
@@ -810,6 +811,7 @@ market
 marrow
 martyr
 marvel
+mascot
 master
 matter
 mature
