--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -429,6 +429,7 @@ durable
 dustbin
 dwindle
 dynamic
+earflap
 earnest
 ebonite
 echelon
@@ -917,6 +918,7 @@ pollute
 polygon
 polymer
 pompous
+pontoon
 popcorn
 popular
 portion
