--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -908,6 +908,7 @@ renovate
 repartee
 reporter
 reprieve
+reproach
 republic
 research
 resemble
@@ -936,6 +937,7 @@ ruminant
 ruminate
 ruthless
 sabotage
+saboteur
 sadistic
 sanction
 Saturday
